--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "daisyui": "^2.51.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "firebase": "^9.19.1",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
